--- a/shrine/index.css
+++ b/shrine/index.css
@@ -12,8 +12,8 @@ html, body {
     max-width: 100%;
     height: auto;
     margin: 0 auto;
-    -webkit-animation: mover 2s ease-out 0s infinite alternate;
-    animation: mover 2s ease-out 0s infinite alternate;
+    -webkit-animation: mover 2s ease-in-out 0s infinite alternate;
+    animation: mover 2s ease-in-out 0s infinite alternate;
 }
 
 @-webkit-keyframes mover {
