Improve footer (source link & Cobalt)

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -19,6 +19,14 @@
         Content: Copyright ⓒ 2019 charlag
     </p>
     <p>
-        Code: <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPLv3</a>
+        <a
+            href="https://github.com/charlag/charlag.github.io"
+            target="_blank">Source code</a>
+        is under
+        <a
+            href="https://www.gnu.org/licenses/gpl-3.0.en.html"
+            target="_blank">
+            GNU GPLv3</a>.
+        Made with <a href="https://cobalt-org.github.io/" target="_blank">Cobalt.rs</a>.
     </p>
 </footer>
