Add favicon. Fafactor head.

--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
         <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/index.css" media="screen" title="no title" charset="utf-8">
+        {% include "head_links.liquid" %}
     </head>
     <body>
         <div class="main-container">
