Fixing some text on main.

--- a/index.liquid
+++ b/index.liquid
@@ -35,7 +35,7 @@ title: charlag
   I should persuade mindfulness. I have my mental health issues.
 </p>
 <p>
-	I never wanted to spread my knowledge thin but over the time
+	I never wanted to spread myself too thin but over the time
 	I've worked with many different things:
 </p>
 <ul>
@@ -45,6 +45,7 @@ title: charlag
 	<li>Java &amp; other JVM things</li>
   <li>Networking</li>
 </ul>
+<p>and tried out/read about countless number of obscure things.</p>
 <p>
   What I'm interested in:
 </p>
