--- a/index.liquid
+++ b/index.liquid
@@ -57,4 +57,6 @@ title: charlag
 	<li>Decentralization &amp; self-hosting</li>
   <li>Libre software</li>
 </ul>
+<p>If you really want to contact me please write to <a href="mailto:charlag@tuta.io">charlag@tuta.io</a>
+    or find me on Fediverse: <a href="https://birb.site/@charlag/">@charlag@birb.site</a>.
 <img class="photo" src="photo.jpg" alt="Photo of a young man in a VR headset"/>
