--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ html {
 body {
     background-color: #282828;
     color: #CCC;
-    font-family: Fira Sans Regular, sans-serif;
+    font-family: Source Code Pro, Fira Code Mono, monospace;
     font-size: 1.2em;
     height: 100%;
 }
@@ -38,8 +38,6 @@ a {
     margin: 0 auto;
     padding: 40px;
     max-width: 800px;
-    display: flex;
-    flex-direction: column;
     min-height: 100%;
 }
 
