Add rel="me" for Mastodon link

--- a/index.liquid
+++ b/index.liquid
@@ -58,5 +58,5 @@ title: charlag
   <li>Libre software</li>
 </ul>
 <p>If you really want to contact me please write to <a href="mailto:charlag@tuta.io">charlag@tuta.io</a>
-    or find me on Fediverse: <a href="https://birb.site/@charlag/">@charlag@birb.site</a>.
+    or find me on Fediverse: <a rel="me" href="https://birb.site/@charlag/">@charlag@birb.site</a>.
 <img class="photo" src="photo.jpg" alt="Photo of a young man in a VR headset"/>
