--- a/index.liquid
+++ b/index.liquid
@@ -3,60 +3,37 @@ permalink: /
 title: charlag
 ---
 <p>
-  The big part of me is making things. I rarely can spend few days
-  without trying out some idea or new technology. At the same time
-  I really like deeply focusing on one project. I'm deeply
-	passionate about my job and about the Fediverse
-	<a href="https://fediverse.party/">What's Fediverse?</a>.
-	Fediverse taught me many things and altered my political views.
-	There's no place for capitalism as it is now if we want to
-	survive. I hope that what I do will help to get us out of this
-	wheel and towards Solarpunk
-	<a href="https://solarpunkanarchists.com/2016/05/27/what-is-solarpunk/">What is solarpunk?</a>.
+	Extremely unfrequently updated website of me.
 </p>
 <p>
-	Previously here was a sentence that I'm looking for a mentor. I've
-	never found one but I think that it's pretty cool. If you need one,
-	just ask me.
+	Neurodivergent person who works in tech but who doesn't
+	define themselves by it.
 </p>
 <p>
-  Despite the fact that I was born in Russia I don't identify myself
-  as a typical Russian nor I share values of most russians. I prefer
-  Finnish, German and some other Nordic cultures which pursue
-  rationalism, equality and humbleness.
+	Nature, mutual aid, urbanism. 	
 </p>
 <p>
-	I had high hopes for functional programming before and I still
-	love it but my nature pushes me towards the most effective
-	solutions. I learned to accept mutability when needed. I hope to
-	learn to write software that lasts.
+	Helping people is important for me, that's why I do things
+	for the Fediverse where I keep a very close
+	circle of people around me. I am contributing to
+	<a href="https://tusky.app">Tusky</a>
+	for years (when I can) among other things.
 </p>
 <p>
-  I should persuade mindfulness. I have my mental health issues.
-</p>
-<p>
-	I never wanted to spread myself too thin but over the time
-	I've worked with many different things:
+	Professionaly I end up doing whatever that needs doing, although
+	I am mostly experienced with client-side:
 </p>
 <ul>
+  <li>ECMAScript, Web &amp; Node.js</li>
   <li>Android</li>
   <li>iOS</li>
-  <li>ECMAScript, Web &amp; Node.js</li>
-	<li>Java &amp; other JVM things</li>
+  <li>Java &amp; other JVM things</li>
   <li>Networking</li>
+  <li>Build &amp; CI infra</li>
 </ul>
 <p>and tried out/read about countless number of obscure things.</p>
 <p>
-  What I'm interested in:
+	If you need a mentor in tech, hit me up.
 </p>
-<ul>
-	<li>Activism</li>
-  <li>Type systems</li>
-  <li>Engineering culture</li>
-  <li>Privacy</li>
-	<li>Decentralization &amp; self-hosting</li>
-  <li>Libre software</li>
-</ul>
 <p>If you really want to contact me please write to <a href="mailto:charlag@tuta.io">charlag@tuta.io</a>
     or find me on Fediverse: <a rel="me" href="https://birb.site/@charlag/">@charlag@birb.site</a>.
-<img class="photo" src="photo.jpg" alt="Photo of a young man in a VR headset"/>
